一覧画面の修正

--- a/templates/register.html
+++ b/templates/register.html
@@ -283,6 +283,7 @@
     <!-- ボタン -->
     <div class="button-group">
         <button type="submit" class="btn btn-primary">登録実行</button>
+        <button type="button" class="btn btn-secondary" onclick="window.location.href='{{ url_for('list_page') }}'">一覧に戻る</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href='/'">閉じる</button>
     </div>
 </form>
